more flexible bug fix for overflow

--- a/web_design.css
+++ b/web_design.css
@@ -2021,7 +2021,8 @@ a.author.moderator:after { content: ""; }
 	border-bottom: 0;
 	padding: 0 0 0 30px;
 	position: relative;
-	overflow: hidden;	
+	overflow: hidden;
+	overflow-x: visible;
 }
 
 .md pre code::before {
